<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_radius_18dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_alert_modal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/recommend_login_to_like_dining" />

        <TextView
            android:id="@+id/text_view_alert_modal_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/gray18"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/text_view_alert_modal_title"
            app:layout_constraintStart_toStartOf="@id/text_view_alert_modal_title"
            app:layout_constraintTop_toBottomOf="@id/text_view_alert_modal_title"
            tools:text="@string/recommend_like_dining" />

        <Button
            android:id="@+id/button_negative"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/close"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/button_positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_alert_modal_message" />

        <Button
            android:id="@+id/button_positive"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/button_negative"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_negative"
            app:layout_constraintTop_toTopOf="@id/button_negative"
            tools:text="@string/action_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>