<?xml version="1.0" encoding="utf-8"?>

<!-- The navigation drawer -->
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/left_nav_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/background"
    android:fitsSystemWindows="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/drawer_left_arrow_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/navi_item_chat"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_chat"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/navi_item_setting"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/navi_item_chat_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_chat_badge"
            android:gravity="center"
            android:paddingHorizontal="6dp"
            android:textColor="@color/white"
            android:translationX="-12dp"
            android:translationY="12dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/navi_item_chat"
            app:layout_constraintStart_toEndOf="@id/navi_item_chat" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/navi_item_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/navi_user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.Koin.Bold.18"
            android:textColor="@color/primary_600"
            app:layout_constraintBaseline_toBaselineOf="@id/navi_hello_message"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="홍길동" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/navi_hello_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="28dp"
            android:text="@string/navigation_hello_message"
            android:textAppearance="@style/TextAppearance.Koin.Medium.14"
            android:textColor="@color/neutral_600"
            app:layout_constraintStart_toEndOf="@id/navi_user_nickname"
            app:layout_constraintTop_toBottomOf="@id/drawer_left_arrow_button"
            app:layout_goneMarginStart="24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/navi_item_login_or_logout"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:text="로그인"
            android:textAppearance="@style/TextAppearance.Koin.Medium.14"
            android:textColor="@color/neutral_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@id/navi_hello_message" />

        <ScrollView
            android:id="@+id/navi_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/navi_item_contact"
            app:layout_constraintTop_toBottomOf="@id/navi_item_login_or_logout">

            <LinearLayout
                android:id="@+id/navi_section_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/navi_item_login_or_logout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_section_service"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/neutral_50"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="24dp"
                    android:text="서비스"
                    android:textAppearance="@style/TextAppearance.Koin.Medium.14"
                    android:textColor="@color/neutral_600" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navi_item_article"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="24dp"
                    android:text="@string/navigation_item_article"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navi_item_bus_timetable"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="24dp"
                    android:text="@string/navigation_item_bus_timetable"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navi_item_bus_search"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="24dp"
                    android:text="@string/navigation_item_bus_search"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navi_item_store"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="24dp"
                    android:text="@string/navigation_item_store"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navi_item_dining"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="24dp"
                    android:text="@string/navigation_item_dining"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navi_item_timetable"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="24dp"
                    android:text="@string/navigation_item_timetable"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navi_item_operating_information"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="24dp"
                    android:text="@string/navigation_item_koreatech_operating_information"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navi_item_land"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="24dp"
                    android:text="@string/navigation_item_land"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navi_item_owner"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="24dp"
                    android:text="@string/navigation_item_owner"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.16" />

            </LinearLayout>
        </ScrollView>

        <View
            android:id="@+id/drawer_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_dark"
            app:layout_constraintTop_toBottomOf="@id/navi_scroll_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/navi_item_contact"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            android:text="@string/navigation_item_ask_bcsd"
            android:textAppearance="@style/TextAppearance.Koin.Regular.16"
            android:textColor="@color/neutral_800"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drawer_divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.navigation.NavigationView>